--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
+
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -17,8 +19,27 @@
 </head>
 
 <body>
-  
-     
+  <header>
+    <div class="title">
+    <h1>
+      Fun Bus
+    </h1>
+  </div>
+   <div class="nav-box">
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">AboutUs</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+ 
+  <div class="school-bus">
+    <img src="img/fun-bus.jpg" alt="picture of a school bus on a beach">
+  </div>
+
+
   <div class="container home">
    
     <section class="content-section">
